# SeaBattleTui

./: CMakeLists.txt  LICENSE  README.md  ideas.cpp  main.cpp
core/core_cpp/: TaskManager.cpp  audio.cpp  concept.cpp  data.cpp  global_config.cpp
core/core_h/: TaskManager.h  audio.h  concept.h  data.h  global_config.h
core/interface/interface_cpp/: bufferManager.cpp  consoleManager.cpp  debug.cpp  screen_converter.cpp  statusManager.cpp  units.cpp
core/interface/interface_h/: bufferManager.h  colors.h  consoleManager.h  debug.h  elements.h  screen_converter.h  statusManager.h
core/interface/units/: units.h
core/interface/units/units_cpp/: Element.cpp  GameField.cpp  InteractList.cpp  Layer.cpp  ShipPattern.cpp  Status.cpp  Text.cpp  staticList.cpp  taskList.cpp
core/interface/units/units_h/: Element.h  GameField.h  InteractList.h  Layer.h  ShipPattern.h  Status.h  Text.h  staticList.h  taskList.h
tool/: order.h  stack.cpp  stack.h  tools.h
tool/array/: array.cpp  array.h
tool/string/: mng_string.cpp  mng_string.h  str.cpp  str.h  strings_data.cpp  strings_data.h
